prod/Ingress-patch.yaml

   
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: nlb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: productcatalog-internal.a.nike.com
  name: ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kirantest
          servicePort: 8089
        path: /*
